--- a/admin.html
+++ b/admin.html
@@ -2,83 +2,107 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA MESTRA V8 | ADMIN</title>
+    <title>SISTEMA MESTRA V8 | PAINEL DE CONTROLE</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
         body { background-color: #050505; color: #00f2ff; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .panel { width: 100%; max-width: 500px; background: #111; border: 2px solid #00f2ff; border-radius: 15px; padding: 25px; box-shadow: 0 0 20px #00f2ff44; box-sizing: border-box; }
-        h2 { text-align: center; text-transform: uppercase; margin-top: 0; }
-        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 5px; margin: 15px 0; box-sizing: border-box; outline: none; }
-        .btn-gerar { width: 100%; background: #00ffa3; color: #000; border: none; padding: 15px; font-weight: bold; border-radius: 5px; cursor: pointer; text-transform: uppercase; }
-        .monitor { margin-top: 25px; border-top: 1px solid #333; padding-top: 15px; }
-        .user-row { background: #1a1a1a; padding: 15px; border-radius: 8px; margin-bottom: 10px; display: flex; flex-direction: column; gap: 10px; }
-        .btn-link { background: #0078d4; color: white; border: none; padding: 8px; border-radius: 4px; cursor: pointer; font-size: 0.8rem; font-weight: bold; }
-        .btn-block { background: #ff4d4d; color: white; border: none; padding: 8px; border-radius: 4px; cursor: pointer; font-size: 0.8rem; }
+        .panel { width: 100%; max-width: 550px; background: #111; border: 2px solid #00f2ff; border-radius: 15px; padding: 30px; box-shadow: 0 0 25px #00f2ff33; box-sizing: border-box; }
+        h2 { text-align: center; text-transform: uppercase; margin-top: 0; letter-spacing: 2px; }
+        .input-box { margin: 20px 0; }
+        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; box-sizing: border-box; outline: none; font-size: 1rem; }
+        input:focus { border-color: #00ffa3; }
+        .btn-gerar { width: 100%; background: #00ffa3; color: #000; border: none; padding: 18px; font-weight: 800; border-radius: 8px; cursor: pointer; text-transform: uppercase; font-size: 1rem; transition: 0.3s; }
+        .btn-gerar:hover { background: #00cc82; transform: scale(1.02); }
+        .monitor { margin-top: 35px; border-top: 1px solid #222; padding-top: 20px; }
+        .user-card { background: #161616; padding: 15px; border-radius: 10px; margin-bottom: 12px; border: 1px solid #222; }
+        .user-info { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
+        .status { color: #00ffa3; font-size: 0.8rem; font-weight: bold; }
+        .btn-copy { width: 100%; background: #0078d4; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer; font-weight: 600; font-size: 0.8rem; transition: 0.2s; }
+        .btn-copy:hover { background: #005a9e; }
+        .btn-del { background: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer; font-size: 0.7rem; }
     </style>
 </head>
 <body>
 
 <div class="panel">
-    <h2>SISTEMA MESTRA V8</h2>
-    <p style="text-align: center; color: #00ffa3; font-size: 0.8rem;">Controle de Acessos Elite Edition</p>
+    <h2>MESTRA V8 CONTROL</h2>
+    <p style="text-align: center; color: #888; font-size: 0.8rem; margin-bottom: 30px;">Gerador de Links Únicos para Advogadas</p>
     
-    <input type="text" id="nomeAdv" placeholder="Nome da Advogada (ex: Dra Helen Cristina)">
-    <button class="btn-gerar" onclick="ativar()">GERAR E ATIVAR ACESSO</button>
+    <div class="input-box">
+        <label style="font-size: 0.7rem; color: #00ffa3;">NOME DA DOUTORA:</label>
+        <input type="text" id="nomeAdv" placeholder="Ex: Dra Helen Cristina">
+    </div>
+    <button class="btn-gerar" onclick="ativarAcesso()">ATIVAR E GERAR LINK NOVO</button>
 
     <div class="monitor">
-        <p>Monitor de Usuárias:</p>
-        <div id="lista"></div>
+        <p style="font-weight: bold; margin-bottom: 15px;">Monitor de Licenças Ativas:</p>
+        <div id="listaUsuarios"></div>
     </div>
 </div>
 
 <script>
+    // CONFIGURAÇÃO DO SEU FIREBASE
     const firebaseConfig = { databaseURL: "https://cassiapromptv8-default-rtdb.firebaseio.com/" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // URL CORRETA DO SEU ARQUIVO NO GITHUB
-    const baseLink = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html";
+    // URL BASE CORRIGIDA (O segredo para não dar erro 404)
+    const urlBase = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html";
 
-    function ativar() {
-        const nome = document.getElementById('nomeAdv').value.trim();
-        if(!nome) return alert("Digite um nome!");
-        const id = nome.replace(/\s+/g, '_'); // Transforma espaços em sublinhados
+    function ativarAcesso() {
+        const nomeInput = document.getElementById('nomeAdv').value.trim();
+        if(!nomeInput) return alert("Por favor, digite o nome da advogada.");
 
-        db.ref('clientes/' + id).set({ nome: nome, status: "ativo" }).then(() => {
-            alert("Acesso Ativado para " + nome);
+        // Cria o ID removendo espaços para não dar erro no link
+        const idLimpo = nomeInput.replace(/\s+/g, '_');
+
+        db.ref('clientes/' + idLimpo).set({
+            nome: nomeInput,
+            status: "ativo",
+            data: new Date().toLocaleDateString()
+        }).then(() => {
+            alert("✅ ACESSO ATIVADO!\nID: " + idLimpo);
             document.getElementById('nomeAdv').value = "";
         });
     }
 
-    db.ref('clientes').on('value', (snap) => {
-        const lista = document.getElementById('lista');
+    // LISTA AS USUÁRIAS E GERA OS BOTÕES DE CÓPIA
+    db.ref('clientes').on('value', (snapshot) => {
+        const lista = document.getElementById('listaUsuarios');
         lista.innerHTML = "";
-        snap.forEach((child) => {
+        
+        snapshot.forEach((child) => {
             const id = child.key;
             const user = child.val();
-            const linkFinal = `${baseLink}?id=${id}`;
+            const linkUnico = `${urlBase}?id=${id}`;
+
             lista.innerHTML += `
-                <div class="user-row">
-                    <div style="display:flex; justify-content:space-between;">
-                        <span>● ${user.nome} (ativo)</span>
-                        <button class="btn-block" onclick="bloquear('${id}')">BLOQUEAR</button>
+                <div class="user-card">
+                    <div class="user-info">
+                        <div>
+                            <span class="status">●</span> <strong>${user.nome}</strong>
+                        </div>
+                        <button class="btn-del" onclick="remover('${id}')">REVOGAR</button>
                     </div>
-                    <button class="btn-link" onclick="copiar('${linkFinal}')">COPIAR LINK ÚNICO PARA WHATSAPP</button>
+                    <button class="btn-copy" onclick="copiarLink('${linkUnico}')">
+                        COPIAR LINK ÚNICO (WHATSAPP)
+                    </button>
                 </div>`;
         });
     });
 
-    function copiar(url) {
-        navigator.clipboard.writeText(url);
-        alert("Link copiado com sucesso! Agora é só colar no WhatsApp da Doutora.");
+    function copiarLink(link) {
+        navigator.clipboard.writeText(link);
+        alert("🔗 LINK COPIADO!\nAgora é só colar no WhatsApp da Doutora.");
     }
 
-    function bloquear(id) {
-        if(confirm("Bloquear acesso de " + id + "?")) {
+    function remover(id) {
+        if(confirm("Deseja cancelar o acesso de " + id + "?")) {
             db.ref('clientes/' + id).remove();
         }
     }
 </script>
+
 </body>
 </html>
