--- a/admin.html
+++ b/admin.html
@@ -2,15 +2,15 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA MESTRA V10 | CONTROL CENTER</title>
+    <title>SISTEMA MESTRA V11 | CONTROL CENTER</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
         body { background: #000; color: #00f2ff; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
         .panel { width: 100%; max-width: 500px; background: #0a0a0a; border: 2px solid #00f2ff; border-radius: 15px; padding: 30px; box-shadow: 0 0 30px rgba(0,242,255,0.3); text-align: center; }
-        h2 { text-transform: uppercase; letter-spacing: 3px; margin-bottom: 25px; text-shadow: 0 0 10px #00f2ff; }
+        h2 { text-transform: uppercase; letter-spacing: 3px; margin-bottom: 25px; }
         input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; margin-bottom: 20px; box-sizing: border-box; outline: none; font-size: 1rem; }
-        .btn-main { width: 100%; background: #00ffa3; color: #000; border: none; padding: 18px; font-weight: 800; border-radius: 8px; cursor: pointer; text-transform: uppercase; box-shadow: 0 0 15px #00ffa366; }
+        .btn-main { width: 100%; background: #00ffa3; color: #000; border: none; padding: 18px; font-weight: 800; border-radius: 8px; cursor: pointer; text-transform: uppercase; }
         .monitor { margin-top: 40px; border-top: 1px solid #222; padding-top: 20px; text-align: left; }
         .card { background: #111; padding: 20px; border-radius: 10px; margin-bottom: 15px; border: 1px solid #222; }
         .btn-copy { width: 100%; background: #0078d4; color: white; border: none; padding: 12px; border-radius: 6px; cursor: pointer; font-weight: 700; margin-top: 15px; text-transform: uppercase; }
@@ -20,12 +20,12 @@
 <body>
 
 <div class="panel">
-    <h2>SISTEMA MESTRA V10</h2>
+    <h2>SISTEMA MESTRA V11</h2>
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA (Ex: Helen)">
     <button class="btn-main" onclick="ativar()">ATIVAR ACESSO IMEDIATO</button>
 
     <div class="monitor">
-        <p style="color: #888; font-size: 0.8rem; letter-spacing: 1px;">LICENÇAS ATIVAS NO FIREBASE:</p>
+        <p style="color: #888; font-size: 0.8rem; letter-spacing: 1px;">LICENÇAS ATIVAS:</p>
         <div id="lista"></div>
     </div>
 </div>
@@ -36,15 +36,15 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // A CORREÇÃO QUE VOCÊ PRECISA: O LINK COM O NOME COMPLETO DO FICHEIRO
-    const LINK_CORRETO_DO_APP = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html";
+    // AQUI ESTÁ O SEGREDO: O NOME COMPLETO DO FICHEIRO PARA ACABAR COM O ERRO 404
+    const ENDERECO_REAL = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html";
 
     function ativar() {
         const nome = document.getElementById('nomeAdv').value.trim();
         if(!nome) return alert("Por favor, digite o nome!");
         const id = nome.replace(/\s+/g, '_'); 
         db.ref('clientes/' + id).set({ nome: nome, status: "ativo" }).then(() => {
-            alert("SISTEMA: Acesso ativado com sucesso!");
+            alert("SISTEMA: Acesso ativado!");
             document.getElementById('nomeAdv').value = "";
         });
     }
@@ -54,8 +54,8 @@
         lista.innerHTML = "";
         snap.forEach((child) => {
             const id = child.key;
-            // O segredo está aqui: forçar o .html no link copiado
-            const linkFinal = LINK_CORRETO_DO_APP + "?id=" + id;
+            // O link gerado agora contém obrigatoriamente o .html
+            const linkFinal = ENDERECO_REAL + "?id=" + id;
             lista.innerHTML += `
                 <div class="card">
                     <button class="btn-revogar" onclick="remover('${id}')">BLOQUEAR</button>
@@ -67,12 +67,12 @@
 
     function copiar(url) {
         navigator.clipboard.writeText(url).then(() => {
-            alert("LINK COPIADO!\nAgora cole no WhatsApp da Dra.");
+            alert("LINK COPIADO COM SUCESSO!");
         });
     }
 
     function remover(id) {
-        if(confirm("Deseja bloquear o acesso de " + id + "?")) db.ref('clientes/' + id).remove();
+        if(confirm("Bloquear " + id + "?")) db.ref('clientes/' + id).remove();
     }
 </script>
 </body>
